[package]
name = "nost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
file_diff = "1.0.0"
inotify = "0.10.2"
log = "0.4.20"
nostr-sdk = "0.24.0"
tokio = "1.33.0"
